--- a/Core/EShopAPİ.Application/EShopAPİ.Application.csproj
+++ b/Core/EShopAPİ.Application/EShopAPİ.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EShopAPİ.Domain\EShopAPİ.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
