--- a/İnfrastructure/EShopAPİ.Persistence/EShopAPİ.Persistence.csproj
+++ b/İnfrastructure/EShopAPİ.Persistence/EShopAPİ.Persistence.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\EShopAPİ.Application\EShopAPİ.Application.csproj" />
+  </ItemGroup>
+
 </Project>
