--- a/İnfrastructure/EShopAPİ.İnfrastructure/EShopAPİ.İnfrastructure.csproj
+++ b/İnfrastructure/EShopAPİ.İnfrastructure/EShopAPİ.İnfrastructure.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\EShopAPİ.Application\EShopAPİ.Application.csproj" />
+  </ItemGroup>
+
 </Project>
