--- a/Presentation/EShopAPi.APİ/EShopAPi.APİ.csproj
+++ b/Presentation/EShopAPi.APİ/EShopAPi.APİ.csproj
@@ -7,11 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.5">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.5">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Core\EShopAPİ.Application\EShopAPİ.Application.csproj" />
+    <ProjectReference Include="..\..\İnfrastructure\EShopAPİ.Persistence\EShopAPİ.Persistence.csproj" />
   </ItemGroup>
 
 </Project>
