--- a/Presentation/EShopAPi.APİ/appsettings.json
+++ b/Presentation/EShopAPi.APİ/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "MsSql": "Server=localhost\\SQLEXPRESS;Database=EShopApiDbv3;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
