--- a/Presentation/EShopAPi.APİ/appsettings.json
+++ b/Presentation/EShopAPi.APİ/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MsSql": "Server=localhost\\SQLEXPRESS;Database=EShopApiDbv3;Trusted_Connection=True;"
+    "MsSql": "Server=localhost\\SQLEXPRESS;Database=Eshopdbv32;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
