--- a/Core/EShopAPİ.Application/EShopAPİ.Application.csproj
+++ b/Core/EShopAPİ.Application/EShopAPİ.Application.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\EShopAPİ.Domain\EShopAPİ.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.5" />
+  </ItemGroup>
+
 </Project>
