--- a/Presentation/EShopAPi.APİ/EShopAPi.APİ.csproj
+++ b/Presentation/EShopAPi.APİ/EShopAPi.APİ.csproj
@@ -15,12 +15,17 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Core\EShopAPİ.Application\EShopAPİ.Application.csproj" />
     <ProjectReference Include="..\..\İnfrastructure\EShopAPİ.Persistence\EShopAPİ.Persistence.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers" />
   </ItemGroup>
 
 </Project>
